--- a/ckanext/feedback/templates/package/snippets/additional_info.html
+++ b/ckanext/feedback/templates/package/snippets/additional_info.html
@@ -12,11 +12,24 @@
       <th scope="row" class="dataset-label">{{ _('Utilizations') }}</th>
       <td class="dataset-details"><a href="{{ h.url_for('utilization.search', id=pkg_dict.id, disable_keyword=true) }}">{{ h.get_package_utilizations(pkg_dict.id) }}</a></td>
     </tr>
+  {% endif %}
+  {% if h.is_enabled_resources() %}
+    <tr>
+      <th scope="row" class="dataset-label">{{ _('Comments') }}</th>
+      <td class="dataset-details">{{ h.get_package_comments(pkg_dict.id) }}</a></td>
+    </tr>
+    <tr>
+      <th scope="row" class="dataset-label">{{ _('Rating') }}</th>
+      <td class="dataset-details">{{ h.get_package_rating(pkg_dict.id)|round(1) }}</a></td>
+    </tr>
+  {% endif %}
+  {% if h.is_enabled_utilizations() %}
     <tr>
       <th scope="row" class="dataset-label">{{ _('Issue Resolutions') }}</th>
       <td class="dataset-details">{{ h.get_package_issue_resolutions(pkg_dict.id) }}</td>
     </tr>
   {% endif %}
+  
   {% if pkg_dict.url %}
     <tr>
       <th scope="row" class="dataset-label">{{ _('Source') }}</th>
