--- a/ckanext/feedback/templates/package/snippets/resource_item.html
+++ b/ckanext/feedback/templates/package/snippets/resource_item.html
@@ -20,6 +20,20 @@
       <a href="{{ h.url_for('utilization.search', id=res.id, disable_keyword=true) }}">{{ h.get_resource_utilizations(res.id) }}</a>
       <div class="description">{{ _('Utilizations') }}</div>
     </div>
+  {% endif %}
+  {% if h.is_enabled_resources() %}
+    <div class="utilization-data bubble">
+      <i class="fa fa-commenting-o"></i>
+      <a href="{{ h.url_for('resource_comment.comment', resource_id=res.id) }}">{{ h.get_resource_comments(res.id) }}</a>
+      <div class="description">{{ _('Comments') }}</div>
+    </div>
+    <div class="utilization-data bubble">
+      <i class="fa fa-star"></i>
+      {{ h.get_resource_rating(res.id)|round(1) }}
+      <div class="description">{{ _('Rating') }}</div>
+    </div>
+  {% endif %}
+  {% if h.is_enabled_utilizations() %}
     <div class="bubble">
       <img id="issue-resolution" src="/images/issue_resolution_badge.png">
       {{ h.get_resource_issue_resolutions(res.id) }}
@@ -74,6 +88,14 @@
             <li>
               <a href="{{ h.url_for('utilization.new', package_name=pkg.name, resource_id=res.id) }}">
                 <i class="fa fa-pencil-square-o"></i>{{ _('Create utilization application') }}
+              </a>
+            </li>
+          {% endif %}
+          {% if h.is_enabled_resources() %}
+            <li>
+              <a href="{{ h.url_for('resource_comment.comment', resource_id=res.id) }}">
+                <i class="fa fa-commenting-o"></i>
+                {{ _('Comment') }}
               </a>
             </li>
           {% endif %}
