--- a/ckanext/feedback/templates/utilization/search.html
+++ b/ckanext/feedback/templates/utilization/search.html
@@ -62,9 +62,9 @@
                   {% block search_by_keyword %}
                     <br>
                     {% if not disable_keyword %}
-                      <h4>キーワード検索</h4>
+                      <h4>{{ _('Keyword Search') }}</h4>
                       <div class="input-group search-input-group">
-                        <input id="field-giant-search" type="text" class="form-control input-lg" name="keyword" placeholder="{{ _('Keyword Search...') }}" aria-label="{{ _('Search utilizaton data') }}" autocomplete="off" value="{{ keyword }}"/>
+                        <input id="field-giant-search" type="text" class="form-control input-lg" name="keyword" placeholder="{{ _('Keyword Search...') }}" aria-label="{{ _('Search utilization data') }}" autocomplete="off" value="{{ keyword }}"/>
                         <span class="input-group-btn">
                           <button class="btn btn-default btn-lg" type="submit" aria-label="{{ _('Submit') }}"><i class="fa fa-search"></i></button>
                         </span>
@@ -73,11 +73,11 @@
                   {% endblock %}
                   {% if c.userobj.sysadmin %}
                     {% block select_status %}
-                      <span><h4>ステータス</h4>
+                      <span><h4>{{ _('Status') }}</h4>
                       <input type="checkbox" id="waiting" name="waiting" onclick="refreshTable()" checked>
-                      <label for="waiting" class="normal-font-weight middle-vertical-aligned">承認待ち</label>
+                      <label for="waiting" class="normal-font-weight middle-vertical-aligned">{{ _('Unapproved') }}</label>
                       <input class="spaced-left" type="checkbox" id="approval" name="approval" onclick="refreshTable()" checked>
-                      <label for="approval" class="normal-font-weight middle-vertical-aligned">承認済</label>
+                      <label for="approval" class="normal-font-weight middle-vertical-aligned">{{ _('Approved') }}</label>
                       </span>
                     {% endblock %}
                   {% endif %}
@@ -86,16 +86,16 @@
                   <hr>
                 {% endif %}
                 {% block result_table %}
-                  <h4 class="bottom-centered-content" id="data-count">検索結果：{{ utilizations|length }}件</h4>
+                  <h4 class="bottom-centered-content" id="data-count">{{ _('Search result：') }}{{ utilizations|length }}{{ _('items') }}</h4>
                   <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content" id="results-table">
                     <thead class="table-header">
                       <tr>
-                        <th class="big-column">タイトル</th>
-                        <th class="big-column">データセット</th>
-                        <th class="medium-column">データリソース</th>
-                        <th class="small-column">登録日</th>
+                        <th class="big-column">{{ _('Title') }}</th>
+                        <th class="big-column">{{ _('Dataset') }}</th>
+                        <th class="medium-column">{{ _('Data resource') }}</th>
+                        <th class="small-column">{{ _('Registration date') }}</th>
                         {% if c.userobj.sysadmin %}
-                          <th class="small-column">ステータス</th>
+                          <th class="small-column">{{ _('Status') }}</th>
                         {% endif %}
                       </tr>
                     </thead>
@@ -112,9 +112,9 @@
                           <td>{{ row.created.strftime('%Y/%m/%d') }}</td>
                           {% if c.userobj.sysadmin %}
                             {% if row.approval == True %}
-                              <td data-approval="true">承認済</td>
+                              <td data-approval="true">{{ _('Approved') }}</td>
                             {% else %}
-                              <td data-waiting="true">承認待ち</td>
+                              <td data-waiting="true">{{ _('Unapproved') }}</td>
                             {% endif %}
                           {% endif %}
                         </tr>
