--- a/ckanext/feedback/templates/header.html
+++ b/ckanext/feedback/templates/header.html
@@ -91,10 +91,10 @@
             {% do menu_items.append(('dataset.search', _('Dataset'))) %}
             {% do menu_items.append(('organization.index', _('Organization'))) %}
             {% do menu_items.append(('group.index', _('Group'))) %}
-            {% if h.is_enabled_utilizations %}
+            {% if h.is_enabled_utilizations() %}
               {% do menu_items.append(('utilization.search', _('Utilization'))) %}
             {% endif %}
-            {% if c.userobj.sysadmin and h.is_enabled_resources %}
+            {% if c.userobj.sysadmin and h.is_enabled_resources() %}
               {% do menu_items.append(('home.about', _('Feedback Comments'))) %}
             {% endif %}
             {% do menu_items.append(('home.about', _('About'))) %}
