Remove "comment" column from utilization_summary and add it to utilization

--- a/ckanext/feedback/templates/utilization/details.html
+++ b/ckanext/feedback/templates/utilization/details.html
@@ -48,7 +48,7 @@
           <br>
           <hr>
           <h4>{{ _('Comments') }}</h4>
-          <p>{{ comments|length }}</p>
+          <p>{{ row.comment }}</p>
           <hr>
           <form name="comment_form" action="{{ url_for('utilization.create_comment', utilization_id=utilization_id ) }}" method="post">
             <h4>{{ _('Comment') }}</h4>
