--- a/ckanext/feedback/templates/management/comments.html
+++ b/ckanext/feedback/templates/management/comments.html
@@ -104,27 +104,27 @@
                           </tr>
                         </thead>
                         <tbody>
-                          {# TODO: Iterate utilizations cooment
-                          {% for row in utilizations %}
+                          {% for row in utilization_commnets %}
                             <tr>
-                              <td class="left-aligned-text"><a href="{{ h.url_for('utilization.details', utilization_id=row.id) }}">{{ row.title }}</a>
-                                <img src="/images/issue_resolution_badge.png" alt="issue resolution badge" class="spaced-left" width="28" height="28"/>
-                                <!-- ToDo -->
-                                <span class="spaced-left">10,000</span>
+                              <td class="small-column">
+                                <input type="checkbox" id="comments-checkbox" name="comments-checkbox" />
                               </td>
-                              <td>{{ row.package_name }}</td>
-                              <td>{{ row.resource_name }}</td>
+                              <td class="left-aligned-text"><a href="{{ h.url_for('utilization.details', utilization_id=row.utilization_id) }}">{{ row.content }}</a>
+                              </td>
+                              <td>{{ row.utilization.title }}</td>
+                              <td>{{ row.utilization.resource.package.title }}</td>
+                              <td>{{ row.utilization.resource.name }}</td>
+                              <td>{{ row.category }}</td>
                               <td>{{ row.created.strftime('%Y/%m/%d') }}</td>
                               {% if c.userobj.sysadmin %}
                                 {% if row.approval == True %}
-                                  <td data-approval="true">承認済</td>
+                                  <td data-approval="true">{{ _('Approved') }}</td>
                                 {% else %}
-                                  <td data-waiting="true">承認待ち</td>
+                                  <td data-waiting="true">{{ _('Waiting') }}</td>
                                 {% endif %}
                               {% endif %}
                             </tr>
                           {% endfor %}
-                          #}
                         </tbody>
                       </table>
                     {% endblock %}
