--- a/ckanext/feedback/templates/management/comments.html
+++ b/ckanext/feedback/templates/management/comments.html
@@ -62,7 +62,6 @@
                     <span>
                       <h4>{{ _('Category') }}</h4>
                       {% for category in categories %}
-                      {# TODO: Iterate categories #}
                         <input type="checkbox" id="{{ category.value }}" name="{{ category.value }}" checked>
                         <label for="{{ category.value }}" class="normal-font-weight middle-vertical-aligned">{{ _(category.value) }}</label>
                       {% endfor %}
@@ -85,7 +84,7 @@
                   <input id="menu2" type="radio" name="tab_menu"><label class="tab-menu" for="menu2">{{ _('Resource Comments') }}</label>
                   <div class="tab-contents" id="menu1">
                     {% block result_utilization_comments_table %}
-                      <h4 class="bottom-centered-content" id="data-count">{{ _('Results: ') }} 0</h4>
+                      <h4 class="bottom-centered-content" id="data-count">{{ _('Results: ') }} {{ utilization_comments|length }}</h4>
                       <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content" id="results-table">
                         <thead class="table-header">
                           <tr>
@@ -104,7 +103,7 @@
                           </tr>
                         </thead>
                         <tbody>
-                          {% for row in utilization_commnets %}
+                          {% for row in utilization_comments %}
                             <tr>
                               <td class="small-column">
                                 <input type="checkbox" id="comments-checkbox" name="comments-checkbox" />
