--- a/ckanext/feedback/templates/utilization/details.html
+++ b/ckanext/feedback/templates/utilization/details.html
@@ -91,7 +91,7 @@
                   <br>
                   <hr>
                   <h4>{{ _('Comments') }}</h4>
-                  <p>{{ approved_comments|length }}</p>
+                  <p>{{ comments|length }}</p>
                   <hr>
                   <form name="comment_form" action="{{ url_for('utilization.create_comment', utilization_id=utilization_id ) }}" method="post">
                     <h4>{{ _('Comment') }}</h4>
